# FEDDLib

FEDDLib-TribitsNew/: CMakeLists.txt  CTestConfig.cmake  PackagesList.cmake  ProjectName.cmake  TPLsList.cmake
FEDDLib-TribitsNew/cmake/: CallbackDefineProjectPackaging.cmake
FEDDLib-TribitsNew/cmake/ctest/: FEDDLibCTestDriver.cmake
FEDDLib-TribitsNew/cmake/ctest/general_gcc/: ctest_serial_debug.cmake
FEDDLib-TribitsNew/cmake/tpls/: FindTPLTrilinos.cmake
FEDDLib-TribitsNew/feddlib/core/: CMakeLists-new.txt  CMakeLists.txt  FEDDCore.hpp
FEDDLib-TribitsNew/feddlib/core/LinearAlgebra/: BlockMap_decl.hpp  BlockMatrix_decl.hpp  BlockMultiVector_decl.hpp  CMakeLists.txt  Map_decl.hpp  Matrix_decl.hpp  MultiVector_decl.hpp
FEDDLib-TribitsNew/feddlib/core/LinearAlgebra/tests/: CMakeLists.txt  map.cpp  matrix.cpp  matrix_assembly.cpp  multivector.cpp
FEDDLib-TribitsNew/feddlib/core/cmake/: Dependencies.cmake
FEDDLib-TribitsNew/sampleScripts/: linux-mpi-debug.sh  linux-serial-debug.sh
feddlib/problems/tests/steadyLinElas/: main.cpp
feddlib/problems/tests/unsteadyLinElas/: main.cpp
